Fix redundant exception code